--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -24,12 +24,13 @@
       </div>
       <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
         <div class="col-4">
-          <img class="img-display" src="./../assets/img/user1.png" />
+          <img class="img-display" (error)="updateUrl($event)" [src]="profilePicture" />
         </div>
         <div class="col">
-          <h3 class="color-info" style="margin-bottom: 0;">Surname</h3>
-          <h3 class="color-info">Lastname</h3>
-          <p class="color-info">email@email.com</p>
+          <h3 class="color-info" style="margin-bottom: 0;">{{memberData.User.FirstName}}</h3>
+          <h3 class="color-info">{{memberData.User.LastName}}</h3>
+          <p class="color-info" *ngIf="memberData.User.Emails[0]">{{memberData.User.Emails[0].Address}}</p>
+          <p class="color-default" *ngIf="!memberData.User.Emails[0]">-</p>
         </div>
       </div>
       <div class="clearfix"></div>
@@ -39,13 +40,13 @@
           <div class="col">
             <div class="display-group">
               <label>Domain</label>
-              <p class="color-info">AP</p>
+              <p class="color-info">--</p>
             </div>
           </div>
           <div class="col">
             <div class="display-group">
               <label>LAN ID</label>
-              <p class="color-info">KKHUMTH</p>
+              <p class="color-info">{{memberData.User.LanID}}</p>
             </div>
           </div>
         </div>
@@ -53,13 +54,16 @@
           <div class="col">
             <div class="display-group">
               <label>Shared mailbox</label>
-              <p class="color-default">-</p>
+              <p class="color-default" *ngIf="memberData.User.Emails[3]">{{memberData.User.Emails[3].Address}}</p>
+              <p class="color-default" *ngIf="!memberData.User.Emails[3]">-</p>
+
             </div>
           </div>
           <div class="col">
             <div class="display-group">
               <label>Alternative email</label>
-              <p class="color-default">KKHUMTH@gmail.com</p>
+              <p class="color-default" *ngIf="memberData.User.Emails[2]">{{memberData.User.Emails[2].Address}}</p>
+              <p class="color-default" *ngIf="!memberData.User.Emails[2]">-</p>
             </div>
           </div>
         </div>
@@ -67,7 +71,7 @@
         <div class="row">
           <div class="col-3">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input" [checked]="memberData.IsGroupAdministrator" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Admin
@@ -77,7 +81,7 @@
 
           <div class="col-7">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input" [checked]="memberData.IsWorkHourReceiver">
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Work Hour Receiver
@@ -86,7 +90,7 @@
           </div>
           <div class="col-3">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input" [checked]="memberData.IsEscalationReceiver">
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Level2
@@ -95,7 +99,7 @@
           </div>
           <div class="col">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsAcknowledgeResultReceiver" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Acknowledgement
