--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -40,13 +40,13 @@
           <div class="col">
             <div class="display-group">
               <label>Domain</label>
-              <p class="color-info">--</p>
+              <p class="color-info">{{getDomain()}}</p>
             </div>
           </div>
           <div class="col">
             <div class="display-group">
               <label>LAN ID</label>
-              <p class="color-info">{{memberData.User.LanID}}</p>
+              <p class="color-info">{{getLanId()}}</p>
             </div>
           </div>
         </div>
@@ -108,10 +108,7 @@
           </div>
 
         </div>
-        <!-- <div class="row" style="float: right;  margin: 25px auto;">
-          <button type="button" class="btn btn-info btn-save">Save</button>
-          <button type="button" class="btn btn-danger btn-cancel">Cancel</button>
-        </div> -->
+
       </div>
 
     </div>
