--- a/src/app/member/member-edit/member-edit.component.html
+++ b/src/app/member/member-edit/member-edit.component.html
@@ -1,27 +1,24 @@
 <div class="container  border-info" style="margin-top: 10px;">
   <div class="row" style="min-height: 550px;">
     <div class="col-11 align-items-center">
-      <!-- <div class="row">
-        <div class="col navbar-header">
-          <h2>Information detail</h2>
-        </div>
-      </div> -->
+
       <div class="row">
         <div class="col action-group">
           <div class="btn-group box-two-line">
             <span class="circle circle-edit"></span>
-            <button type="button" [routerLink]=" ['./../../../member/edit/1'] " class="btn btn-info">Edit</button>
+            <button type="button" class="btn btn-info">Edit</button>
           </div>
         </div>
       </div>
       <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
         <div class="col-4">
-          <img class="img-display" src="./../assets/img/user1.png" />
+          <img class="img-display" (error)="updateUrl($event)" [src]="profilePicture" />
         </div>
         <div class="col">
-          <h3 class="color-info" style="margin-bottom: 0;">Surname</h3>
-          <h3 class="color-info">Lastname</h3>
-          <p class="color-info">email@email.com</p>
+          <h3 class="color-info" style="margin-bottom: 0;">{{memberData.User.FirstName}}</h3>
+          <h3 class="color-info">{{memberData.User.LastName}}</h3>
+          <p class="color-info" *ngIf="companyMail">{{companyMail}}</p>
+          <p class="color-default" *ngIf="!companyMail">-</p>
         </div>
       </div>
       <div class="clearfix"></div>
@@ -31,13 +28,13 @@
           <div class="col">
             <div class="display-group">
               <label>Domain</label>
-              <p class="color-info">AP</p>
+              <p class="color-info">{{getDomain()}}</p>
             </div>
           </div>
           <div class="col">
             <div class="display-group">
               <label>LAN ID</label>
-              <p class="color-info">KKHUMTH</p>
+              <p class="color-info">{{getLanId()}}</p>
             </div>
           </div>
         </div>
@@ -45,15 +42,18 @@
           <div class="col">
             <div class="display-group">
               <label>Shared mailbox</label>
-              <!-- <p class="color-default">-</p> -->
-              <input type="text" class="form-control input-underline" value="-">
+              <input type="email" class="form-control input-underline" [(ngModel)]="sharedMail"> 
+              <!-- <p class="color-default" *ngIf="sharedMail">{{sharedMail}}</p>
+              <p class="color-default" *ngIf="!sharedMail">-</p> -->
+
             </div>
           </div>
           <div class="col">
             <div class="display-group">
               <label>Alternative email</label>
-              <!-- <p class="color-default">KKHUMTH@gmail.com</p> -->
-              <input type="email" class="form-control input-underline" value="KKHUMTH@gmail.com">
+              <input type="email" class="form-control input-underline" [(ngModel)]="alternativeMail"> 
+              <!-- <p class="color-default" *ngIf="alternativeMail">{{alternativeMail}}</p>
+              <p class="color-default" *ngIf="!alternativeMail">-</p> -->
             </div>
           </div>
         </div>
@@ -61,7 +61,8 @@
         <div class="row">
           <div class="col-3">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input" [checked]="memberData.IsGroupAdministrator" 
+              (change)="memberData.IsGroupAdministrator = !memberData.IsGroupAdministrator" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Admin
@@ -71,7 +72,8 @@
 
           <div class="col-7">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsWorkHourReceiver"
+              (change)="memberData.IsWorkHourReceiver = !memberData.IsWorkHourReceiver" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Work Hour Receiver
@@ -80,7 +82,8 @@
           </div>
           <div class="col-3">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input" [checked]="memberData.IsEscalationReceiver"
+              (change)="memberData.IsEscalationReceiver = !memberData.IsEscalationReceiver" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Level2
@@ -89,7 +92,8 @@
           </div>
           <div class="col">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-              <input type="checkbox" class="custom-control-input">
+              <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsAcknowledgeResultReceiver"
+              (change)="memberData.IsAcknowledgeResultReceiver = !memberData.IsAcknowledgeResultReceiver" >
               <span class="custom-control-indicator"></span>
               <span class="text-selector">
                 Acknowledgement
@@ -99,8 +103,8 @@
 
         </div>
         <div class="row" style="float: right;  margin: 25px auto; margin-top: 50px;">
-          <button type="button" class="btn btn-info btn-save">Save</button>
-          <button type="button" class="btn btn-danger btn-cancel">Cancel</button>
+          <button type="button" class="btn btn-info btn-save" (click)="updateProfile()">Save</button>
+          <button type="button" class="btn btn-danger btn-cancel" routerLink="/member/detail/{{memberData.GroupID}}/{{memberData.UserID}}">Cancel</button>
         </div>
       </div>
 
