------- can create user call one time

--- a/src/app/member/member-create/member-create.component.css
+++ b/src/app/member/member-create/member-create.component.css
@@ -5,6 +5,7 @@
 
 .img-display {
     width: 20vh;
+    height: 20vh;
     border: 2px solid #47bdcd;
     border-radius: 50%;
     margin: auto;
@@ -75,3 +76,28 @@
 .custom-control {
     margin: 10px auto; 
 }
+
+
+.thumbnail {
+    position: relative;
+    overflow: hidden;
+    width: 20vh;
+    height: 20vh;
+    border: 2px solid #47bdcd;
+    border-radius: 50%;
+    margin: auto;
+  }
+  .thumbnail img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 100%;
+    width: auto;
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+  }
+  .thumbnail img.portrait {
+    width: 100%;
+    height: auto;
+  }
