--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+
+body {
     background-image: url("Capture.png");
     background-repeat: repeat;
     background-color: black;
 }
 
 @import "../node_modules/fullcalendar/dist/fullcalendar.min.css";
+
+/* //modal style */
+
+.fade.in {
+    opacity: 1;
+}
+
+.modal.in .modal-dialog {
+    -webkit-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    transform: translate(0, 0);
+}
+
+.modal-backdrop .fade .in {
+    opacity: 0.5 !important;
+}
+
+.modal-backdrop.fade {
+    opacity: 0.5 !important;
+}
+
+
+/* //end modal style */
