--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -21,7 +21,22 @@
           <label for="example-date-input" style="display: inline-block; width: 81px;">
             <b style="font-size:1rem;">Date from:</b>
           </label>
-          <input class="form-control" id="example-date-input" type="date" value="2017-10-08" style="display: inline-block; margin-left: 20px;">
+
+          <input type="text" class="form-control" placeholder="YYYY-MM-DD" bsDatepicker 
+          [(ngModel)] ="FilterDateFrom"
+          [bsConfig]="{dateInputFormat: 'YYYY-MM-DD',containerClass:'theme-blue',showWeekNumbers: false}"
+          (bsValueChange)="FilterDateFrom = $event ; selectedStartDate()"
+          style="display: inline-block; margin-left: 20px;"
+          />
+
+          <!-- <input class="form-control"
+          [ngModel] ="FilterDateFrom | date:'yyyy-MM-dd'"
+          onkeydown="return false"
+          (ngModelChange)="FilterDateFrom = $event"
+          type="date" 
+          (input)="selectedStartDate()"
+          style="display: inline-block; margin-left: 20px;" 
+          /> -->
         </div>
       </div>
       <!-- </div> -->
@@ -29,10 +44,18 @@
       <!-- <div class="row"> -->
       <div class="form-inline text-label">
         <div class="form-group">
+          
           <label for="example-date-input" style="display: inline-block; width: 81px;">
             <b style="font-size:1rem;">Date to:</b>
           </label>
-          <input class="form-control" id="example-date-input" type="date" value="2017-11-04" style="display: inline-block; margin-left: 20px;">
+
+          <input type="text" class="form-control" placeholder="YYYY-MM-DD" bsDatepicker
+          [(ngModel)] ="FilterDateTo"
+          [bsConfig]="{dateInputFormat: 'YYYY-MM-DD',containerClass:'theme-blue',showWeekNumbers: false}"
+          (bsValueChange)="FilterDateTo = $event ; selectedStartDate()"
+          style="display: inline-block; margin-left: 20px;"
+          />
+
         </div>
       </div>
       <!-- </div> -->
@@ -268,6 +291,8 @@
             </td>
             <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
           </tr> -->
+          
+          
         </tbody>
       </table>
     </div>
