--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 @import "../node_modules/fullcalendar/dist/fullcalendar.min.css";
-
+@import  "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css";
 /* //modal style */
 
 .fade.in {
